<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ReSinau</string>
    <string name="score">Score</string>
    <string name="profile">Profile</string>
    <string name="lesson">Lesson</string>
    <string name="contact">Contact</string>
    <string name="contest">Contest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rumus_matematika">Rumus Matematika</string>
    <string name="rumus_ipa">Rumus IPA</string>
    <string name="tajwid">Tajwid</string>
    <string name="semua_pelajaran">Semua Pelajaran</string>
    <string name="sd">SD</string>
    <string name="smp">SMP</string>
    <string name="sma">SMA</string>
    <string name="kelas1">Kelas 1</string>
    <string name="kelas2">Kelas 2</string>
    <string name="kelas3">Kelas 3</string>
    <string name="kelas4">Kelas 4</string>
    <string name="kelas5">Kelas 5</string>
    <string name="kelas6">Kelas 6</string>
    <string name="kelas7">Kelas 7</string>
    <string name="kelas8">Kelas 8</string>
    <string name="kelas9">Kelas 9</string>
    <string name="kelas10">Kelas 10</string>
    <string name="kelas11">Kelas 11</string>
    <string name="kelas12">Kelas 12</string>
    <string name="score_mat">Math:</string>
    <string name="score_ipa">Ipa:</string>
    <string name="score_pai">Pai:</string>
    <string name="score_ips">Ips:</string>
    <string name="matematika">MATEMATIKA</string>
    <string name="indonesia">Bahasa Indonesia</string>
    <string name="inggris">Bahasa Inggris</string>
    <string name="ips">IPS (Ilmu Pengetahuan Sosial)</string>
    <string name="ipa">IPA (Ilmu Pengetahuan Alam)</string>
    <string name="pai">PAI (Pendidikan Agama Islam)</string>
    <string name="pancasila">Pendidikan Pancasila</string>
    <string name="seni">Seni dan Budaya</string>
    <string name="olahraga">PJOK (PenJasKes)</string>
    <string name="try_again">coba lagi</string>
    <string name="toast_salah">cek lagi jawaban anda!</string>
    <string name="mat_sd">matematika sd</string>
    <string name="mat_smp">matematika smp</string>
    <string name="mat_sma">matematika sma</string>
    <string name="pai_sd">pai sd</string>
    <string name="pai_smp">pai smp</string>
    <string name="pai_sma">pai sma</string>
    <string name="ipa_sd">ipa sd</string>
    <string name="ipa_smp">ipa smp</string>
    <string name="ipa_sma">ipa sma</string>
    <string name="ips_sd">ips sd</string>
    <string name="ips_smp">ips smp</string>
    <string name="ips_sma">ips sma</string>
    <string name="segments_sukses">Mantab anda keren!!!, menuju materi selanjutnya</string>
    <string name="next">selanjutnya</string>
    <string name="sukses">anda hebat</string>
    <string name="cek">cek jawaban</string>
    <string name="lanjut">selanjutnya</string>
    <string name="kurang_tepat">jawaban belum benar, ayo coba lagi !!</string>\
    <string name="empty_energy">Energi Anda habis, tunggu beberapa saat lagi</string>
    <string name="changelog">
        Changelog\n
        \n
        Bismillah\n
        Alhamdulillah\n
         \n
          ««––– 2.8 ––– »»\n
         • add score ips SMP\n
         • update soal ips SMP completed\n
        \n
          ««––– 2.7 ––– »»\n
        • fix soal pai kelas 2 nomor 16\n
        • fix soal pai kelas 9 nomor 4\n
        • add soal ips sd complete\n
        \n
         ««––– 2.6 ––– »»\n
        • fix soal ipa kelas 1 no, soal tidak lengkap\n
        • new ips package dir\n
        • new ips res dir\n
        • add fragment ips kelas 1-9\n
        • add mipmap ips\n
        • remove unused file or variavel\n
         \n
         ««––– 2.5 ––– »»\n
        • fix jawaban salan mat kelas 7 no 10\n
        • update soal smp Ipa lengkap\n
        • mipmap-smp\n
        • update score ipa smp\n
        • ignore "missing translation"\n
        \n
         ««––– 2.4 ––– »»\n
        • fix layout for android display small resolution\n
        • upgrade app compact 1.6\n
        • fix soal bergambar soal ipa kelas 6\n
        \n
         ««––– 2.3 ––– »»\n
        • add res ipa\n
        • add layout ipa\n
        • add mipmap ipa sd\n
        • add example.ipa\n
        • add example.scoremanager.ipa\n
        • add soal ipa sd 1-6\n
        \n
        ««––– 2.2 ––– »»\n
        • fix bug score pai SD\n
        • fix bug score pai SMP\n
        • fix bug dobel score\n
        • add fragment ipa sd 1-6\n
        • add fragment ipa smp 7-9\n
        \n
        ««––– 2.1 ––– »»\n
        • fix Bug energy 0 di beberapa android versi 7.0 kebawah\n
        • fix Bug energy loop\n
        • SMP sekarang sudah bisa di akses\n
        • minor update:\n
            \t\t • PAI SMP completed\n
        \n
        ««––– 2.0 ––– »»\n
        \n
        Selamat datang di Resinau 2.0, apa saja yang baru: ?\n
        • Icon baru untuk Resinau\n
        • System Energy telah di tambahkan dengan detail :\n
        \t 1. energy default sebanyak 3\n
        \t 2. energy akan berkurang 1 untuk jawaban salah\n
        \t 3. energy akan pulih setelah 4 jam\n
        \t 4. energy bericon hati dan di samping tertera jumlah energi tersisa\n
        • Update Lainya untuk versi 2.0\n
        \t\t  • add new package PAI kelas 1-6\n
        \t\t  • re-organize folder\n
        \t\t  • fix bug jawaban dan dobel pilihan\n
        \n
        
        Version 1.9\n
                • add activity materi smp\n
                • add latihan soal materi smp\n
                • add materi smp matematika complete\n
                \t • soal smp kelas 7 90 soal\n
                \t • soal smp kelas 8 120 soal\n
                \t • soal smp kelas 7 150 soal\n
                • untuk versi 2.0 keatas akan ada fitur energy,dimana fungsinya,apabila salah\n
                  menjawab dalam segment soal, energy akan berkurang\n
                • energy akan pulih setelah beberapa waktu yang telah ditentukan\n

        \n
        
        Version 1.8b\n
                • complete materi sd matematika \n
                \t • soal untuk kelas 6sd 60 soal \n
        \n

        Version 1.8a\n
                • minor update:\n
                    \t\t • melengkapi soal matematika kelas 5\n
                    \t\t • melengkapi soal matematika kelas 6\n
        \n

        Version 1.8\n
                • memperbaiki bug autochecked di soal selanjutnya\n
                • menghilangkan checked ketika menjawab soal dengan jawaban salah\n
                • score live update ketika segment soal telah selesai\n
                • minor update:\n
                    \t\t • melengkapi soal matematika kelas 3\n
                    \t\t • melengkapi soal matematika kelas 4\n
                    \t\t • format opsi pilihan ganda, a, b , c ,d\n
                    \t\t • toast ketika segment sukses \n
        \n

        Version 1.7\n
                • menambahkan soal bergambar\n
                • menambahkan pair pada soal (text,img)\n
                • menambahkan sub folder matematika -> res\n
        \n

        Version 1.6\n
                • mennganti ic_launcher dengan custom\n
                • minor update\n
                \t\t • melengkapi soal matematika kelas 1\n
                \t\t • menambakan soal matematika kela 2\n
        \n

        Version 1.5\n
                • menambah tool generator soal\n
        \n

        Version 1.4\n
                • menambah dinamik progressbar pada tiap fragment\n
        \n

         Version 1.3\n
                • menambahkan fungsi tambahan score tiap segment soal\n
                • menampilkan score pada tiap jenjang sekolah\n
        \n

          Version 1.2\n
                • menambah tombol selanjutnya pada soal\n
                • menambah toast jawaban\n
        \n

        Version 1.1\n
                • welcome page\n
                • menambahkan soal matematika sd kelas\n
        \n











    </string>


</resources>