<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/lesson"
        android:id="@+id/lesson"
        android:icon="@drawable/ic_baseline_school_24"/>

    <item
        android:id="@+id/contest"
        android:title="@string/contest"
        android:icon="@drawable/ic_baseline_animation_24"/>

    <item
        android:id="@+id/score"
        android:title="@string/score"
        android:icon="@drawable/ic_baseline_credit_score_24"/>

    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_baseline_perm_contact_calendar_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>


</menu>